--- a/source/index.html
+++ b/source/index.html
@@ -7,6 +7,6 @@
   <body>
 
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS. Адаптивная вёрстка и автоматизация</a>».</p>
-
+    <p>Наставник - Антон Попов</p>
   </body>
 </html>
